--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,19 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>spring-mvc-validate</module>
+        <module>spring-mvc-ssm-mapper</module>
     </modules>
 
+    <!--<properties>-->
+        <!--<project.build.sourceEncoding>UTF8</project.build.sourceEncoding>-->
+        <!--<spring.version>4.3.23.RELEASE</spring.version>-->
+        <!--<slf4j.version>1.6.6</slf4j.version>-->
+        <!--<log4j.version>1.2.12</log4j.version>-->
+        <!--<mybatis.version>3.5.0</mybatis.version>-->
+    <!--</properties>-->
     <properties>
         <project.build.sourceEncoding>UTF8</project.build.sourceEncoding>
-        <spring.version>4.3.23.RELEASE</spring.version>
+        <spring.version>4.0.8.RELEASE</spring.version>
         <slf4j.version>1.6.6</slf4j.version>
         <log4j.version>1.2.12</log4j.version>
         <mybatis.version>3.2.4</mybatis.version>
