--- a/spring-mvc-ssm-mapper/pom.xml
+++ b/spring-mvc-ssm-mapper/pom.xml
@@ -114,4 +114,16 @@
             <version>3.1.0</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <!--跳过所有的测试-->
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
