--- a/spring-mvc-ssm-template/pom.xml
+++ b/spring-mvc-ssm-template/pom.xml
@@ -10,15 +10,19 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>war</packaging>
 
-    <artifactId>spring-mvc-ssm-mapper</artifactId>
+    <artifactId>spring-mvc-ssm-template</artifactId>
+
 
     <properties>
         <project.build.sourceEncoding>UTF8</project.build.sourceEncoding>
-        <spring.version>4.0.8.RELEASE</spring.version>
+
+        <!--spring整合mybatis时版本要求：http://www.mybatis.org/spring/zh/index.html-->
+        <spring.version>4.3.23.RELEASE</spring.version>
+        <mybatis.version>3.5.0</mybatis.version>
+        <mybatis-spring.version>1.3.2</mybatis-spring.version>
+
         <slf4j.version>1.6.6</slf4j.version>
         <log4j.version>1.2.12</log4j.version>
-        <mybatis.version>3.2.4</mybatis.version>
-        <mybatis-spring.version>1.2.2</mybatis-spring.version>
     </properties>
 
     <dependencies>
@@ -125,6 +129,16 @@
     </dependencies>
     <build>
         <plugins>
+            <!--指定编译的Java版本-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <!--测试相关-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
