--- a/spring-mvc-validate/pom.xml
+++ b/spring-mvc-validate/pom.xml
@@ -11,6 +11,14 @@
 
     <artifactId>spring-mvc-validate</artifactId>
 
+    <properties>
+        <project.build.sourceEncoding>UTF8</project.build.sourceEncoding>
+        <spring.version>4.0.8.RELEASE</spring.version>
+        <slf4j.version>1.6.6</slf4j.version>
+        <log4j.version>1.2.12</log4j.version>
+        <mybatis.version>3.2.4</mybatis.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
