--- a/spring-mvc-ssm-format/pom.xml
+++ b/spring-mvc-ssm-format/pom.xml
@@ -29,6 +29,8 @@
 
         <junit.version>4.11</junit.version>
         <servlet.version>3.1.0</servlet.version>
+
+        <jackson.version>2.9.8</jackson.version>
     </properties>
 
     <dependencies>
@@ -127,17 +129,26 @@
         </dependency>
 
         <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>${servlet.version}</version>
+        </dependency>
+
+        <!--gson-->
+        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
         </dependency>
 
-        <!--Controller Test-->
+        <!--jackson-->
+        <!--自动包含了 jackson-core/jackson-databind/jackson-annotation-->
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>${servlet.version}</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
+
     </dependencies>
     <build>
         <plugins>
