--- a/spring-mvc-validate/pom.xml
+++ b/spring-mvc-validate/pom.xml
@@ -12,11 +12,19 @@
     <artifactId>spring-mvc-validate</artifactId>
 
     <properties>
+        <!--旧版本ssm-->
+        <!--<spring.version>4.0.8.RELEASE</spring.version>-->
+        <!--<mybatis.version>3.2.4</mybatis.version>-->
+        <!--<mybatis-spring.version>1.2.2</mybatis-spring.version>-->
+
+        <!--spring整合mybatis时版本要求：http://www.mybatis.org/spring/zh/index.html-->
+        <spring.version>4.3.23.RELEASE</spring.version>
+        <mybatis.version>3.5.0</mybatis.version>
+        <mybatis-spring.version>1.3.2</mybatis-spring.version>
+
         <project.build.sourceEncoding>UTF8</project.build.sourceEncoding>
-        <spring.version>4.0.8.RELEASE</spring.version>
         <slf4j.version>1.6.6</slf4j.version>
         <log4j.version>1.2.12</log4j.version>
-        <mybatis.version>3.2.4</mybatis.version>
     </properties>
 
     <dependencies>
@@ -48,7 +56,7 @@
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
-            <version>1.2.2</version>
+            <version>${mybatis-spring.version}</version>
         </dependency>
 
         <!-- junit测试包 -->
