--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <module>spring-mvc-ssm-template</module>
         <module>spring-mvc-ssm-format</module>
         <module>spring-mvc-ssm-fileupload</module>
+        <module>spring-mvc-ssm-exception</module>
+        <module>spring-mvc-restful</module>
     </modules>
 
 </project>
