--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>spring-mvc-ssm-fileupload</module>
         <module>spring-mvc-ssm-exception</module>
         <module>spring-mvc-restful</module>
+        <module>spring-mvc-i18n</module>
     </modules>
 
 </project>
