--- a/spring-mvc-ssm-template/pom.xml
+++ b/spring-mvc-ssm-template/pom.xml
@@ -115,9 +115,9 @@
             <version>5.1.19</version>
         </dependency>
         <dependency>
-            <groupId>c3p0</groupId>
+            <groupId>com.mchange</groupId>
             <artifactId>c3p0</artifactId>
-            <version>0.9.1.2</version>
+            <version>0.9.5.4</version>
         </dependency>
 
         <!--Controller Test-->
